# Ecommerce_web

new-main/: .env.example  MANIFEST.in  Procfile  build.sh  db.sqlite3  pyproject.toml  render-database.yaml  render.yaml  requirements.txt  setup.cfg  setup.py  test_db.py  test_django.py  test_paytm.py
new-main/PayTm/: Checksum.py
new-main/cart/: urls.py  views.py
new-main/ecommerce/: production_settings.py  settings.py  wsgi.py
new-main/static/assets/css/: style.css
new-main/templates/: about.html  activate.html  base.html  checkout.html  contact.html  index.html  order_summary.html  payment_failed.html  payment_success.html  paymentstatus.html  paytm.html  profile.html  reset-user-password.html
new-main/truckbrand/: paytm_config.py  urls.py  views.py
truckbrand/: views.py
